# BSplineRenderer

./: .clang-format  .gitignore  BSplineCurves3D.drawio  BSplineCurves3D.pro  BSplineCurves3D.qrc  BSplineRenderer.qrc  CMakeLists.txt  Controller.cpp  Controller.h  Light.h  Main.cpp  Model.cpp  Model.h  ModelData.cpp  README.md  RendererManager.cpp  RendererManager.h  Resources.qrc  Window.cpp  Window.h
Resources/Data/: test-curves-light.json
Resources/Shaders/: Basic.frag  Basic.vert  CurveSelection.frag  Model.frag  Model.vert  Path.frag  PipeDumb.frag  PipeDumb.vert  PipeSmart.frag  PipeSmart.vert  SkyBox.frag  SkyBox.vert  Spline.frag  Spline.tcs  Spline.tes  Spline.vert
Resources/Shaders/Path/: VertexShader.vert
Source/: Bezier.cpp  Camera.h  CameraManager.h  Controller.h  Curve.cpp  Light.cpp  LightManager.h  Main.cpp  Material.cpp  Material.h  ModelManager.h  Node.cpp  Point.h  RendererManager.h
Source/Core/: AnimationManager.h  Constants.h  Controller.cpp  Controller.h  CurveContainer.cpp  CurveContainer.h  CurveSerializer.h  PresetShapes.h  UndoRedoManager.h  Window.cpp  Window.h
Source/Curve/: Knot.cpp  Knot.h  Spline.cpp  Spline.h
Source/EventHandler/: EventHandler.cpp  EventHandler.h
Source/Gui/: ImGuiWindow.cpp  ImGuiWindow.h
Source/Node/: Node.cpp  Node.h
Source/Node/Camera/: FreeCamera.cpp  FreeCamera.h
Source/Node/Light/: DirectionalLight.h  Light.h  PointLight.h
Source/Node/Mesh/: Mesh.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Texture.h  Vertex.h
Source/Node/Model/: Model.h
Source/Node/SkyBox/: SkyBox.cpp  SkyBox.h
Source/Renderer/: CurveSelectionRenderer.cpp  CurveSelectionRenderer.h  RendererManager.cpp  RendererManager.h  SplineRenderer.cpp  SplineRenderer.h
Source/Renderer/Base/: CurveSelectionFramebuffer.cpp  CurveSelectionFramebuffer.h  Interval.cpp  Interval.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h
Source/Structs/: Mouse.h
Source/Util/: Logger.cpp  Logger.h  Util.cpp  Util.h
Sources/: CameraManager.cpp  Controller.cpp  Curve.h  CurveManager.cpp  CurveManager.h  DummyCamera.h  Enums.h  FreeCamera.cpp  Light.h  LightManager.cpp  Macros.h  Main.cpp  Model.h  ModelData.cpp  ModelManager.cpp  RendererManager.cpp  ShaderManager.cpp  Spline.cpp  Ticks.cpp  Ticks.h  Window.cpp  Window.h
resources/Data/: test-curves-heavy.json
resources/Shaders/: Path.vert  PipeDumb.geom
src/: Bezier.h  Camera.cpp  Controller.cpp  DummyCamera.cpp  FreeCamera.h  Helper.cpp  Helper.h  Model.cpp  ModelData.cpp  ModelData.h  Node.h  Point.cpp  ShaderManager.cpp  ShaderManager.h  Spline.h
